--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,9 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "run_at": "document_idle"
+
     }
   ],
   "icons": {
